@@ -1,9 +1,17 @@
 package com.ocrs.auth.config;
 
+import com.ocrs.auth.security.CustomAccessDeniedHandler;
+import com.ocrs.auth.security.CustomUserDetailsService;
+import com.ocrs.auth.security.JwtAuthenticationEntryPoint;
 import com.ocrs.auth.security.JwtAuthenticationFilter;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -15,53 +23,107 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Spring Security configuration for auth-service.
+ * Implements JWT-based stateless authentication with proper error handling.
+ */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(securedEnabled = true, jsr250Enabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-        @Autowired
-        private JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final JwtAuthenticationFilter jwtAuthFilter;
+        private final CustomUserDetailsService userDetailsService;
+        private final JwtAuthenticationEntryPoint authEntryPoint;
+        private final CustomAccessDeniedHandler accessDeniedHandler;
 
+        @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000,http://localhost:3001}")
+        private List<String> allowedOrigins;
+
+        @Value("${cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS}")
+        private List<String> allowedMethods;
+
+        /**
+         * BCrypt password encoder with strength 12 for secure password hashing.
+         * Backward compatible with existing passwords encoded with default strength.
+         */
         @Bean
         public PasswordEncoder passwordEncoder() {
-                return new BCryptPasswordEncoder();
+                return new BCryptPasswordEncoder(12);
         }
 
+        /**
+         * DaoAuthenticationProvider configured with our UserDetailsService and
+         * PasswordEncoder.
+         * This is the standard Spring Security way to authenticate users.
+         */
+        @Bean
+        public DaoAuthenticationProvider authenticationProvider() {
+                DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+                provider.setUserDetailsService(userDetailsService);
+                provider.setPasswordEncoder(passwordEncoder());
+                return provider;
+        }
+
+        /**
+         * AuthenticationManager bean for programmatic authentication (e.g., in login
+         * service).
+         */
+        @Bean
+        public AuthenticationManager authenticationManager(
+                        AuthenticationConfiguration config) throws Exception {
+                return config.getAuthenticationManager();
+        }
+
+        /**
+         * Main security filter chain configuration.
+         */
         @Bean
         public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-                http
+                return http
                                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                                 .csrf(csrf -> csrf.disable())
                                 .sessionManagement(session -> session
                                                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                .exceptionHandling(ex -> ex
+                                                .authenticationEntryPoint(authEntryPoint)
+                                                .accessDeniedHandler(accessDeniedHandler))
                                 .authorizeHttpRequests(auth -> auth
                                                 .requestMatchers("/api/auth/**").permitAll()
-                                                .requestMatchers("/api/internal/**").permitAll() // Internal APIs for
-                                                                                                 // service-to-service
-                                                                                                 // communication
-                                                .requestMatchers("/api/admin/authorities/**").permitAll() // Authority
-                                                                                                          // CRUD for
-                                                                                                          // frontend
+                                                .requestMatchers("/api/internal/**").permitAll()
+                                                .requestMatchers("/api/admin/authorities/**").permitAll()
                                                 .requestMatchers("/actuator/**").permitAll()
                                                 .anyRequest().authenticated())
-                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
-                return http.build();
+                                .authenticationProvider(authenticationProvider())
+                                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                                .headers(headers -> headers
+                                                .frameOptions(frame -> frame.deny())
+                                                .contentTypeOptions(content -> {
+                                                })
+                                                .xssProtection(xss -> xss.disable()))
+                                .build();
         }
 
+        /**
+         * CORS configuration with externalized allowed origins.
+         */
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of(
-                                "http://localhost:5173",
-                                "http://localhost:3001",
-                                "http://localhost:3000"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setAllowedOrigins(allowedOrigins);
+                configuration.setAllowedMethods(allowedMethods);
+                configuration.setAllowedHeaders(List.of(
+                                "Authorization",
+                                "Content-Type",
+                                "X-Requested-With",
+                                "Accept",
+                                "Origin"));
+                configuration.setExposedHeaders(List.of("Authorization"));
                 configuration.setAllowCredentials(true);
+                configuration.setMaxAge(3600L);
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
